--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.15.0",
